# evolving_robots_diffusion

./: .gitignore  README.md  pyproject.toml
diffusion_v4/: data_sets.py  diffusion_args.py  model_architecture.py  sample.py  transform_data.py
diffusion_v4/adding_noise/: adding_noise.py  determine_T_beta_end.py  evaluating_transformations.py  visualize_forward_process.py
diffusion_v4/parameter_tuning/: finding_beta_end.py  finding_lr.py
diffusion_v4/parameter_tuning/b015_T600/: mse_log.csv
diffusion_v4/parameter_tuning/b01_T600/: mse_log.csv
diffusion_v4/parameter_tuning/b02T500/: mse_log.csv
diffusion_v4/parameter_tuning/b03_T400/: mse_log.csv
diffusion_v4/parameter_tuning/b05_T200/: mse_log.csv
diffusion_v4/plotting/: plot_experiment_results.py  plot_mse_loss.py  plot_robot.py  plot_success.py
diffusion_v4/simple_env/: define_reward.py  generation_dm.py  helper_functions.py  train_and_sample.py
diffusion_v4/training/: group_diff.py  mse_loss_sampling.py  train_mse.py  train_on_datasets.py
imported_exp_data/2024-08-26-Walker_v0_cppn/: CPPN_7_generations
imported_exp_data/2024-09-13-Diffusion_v0/: metadata.txt
imported_exp_data/2024_09_27_Walker_v0_ga/: Plot  metadata.txt
scripts/: eval_overfitting.py  run_simple_cppn.py  run_simple_ga.py  run_simple_generational_dm.py  train_diffusion.py  visualize_forward_process.py
simple_env/: cppn_helper.py  cppn_simple.py  direct_gradient.py  ga_simple.py  generation_dm.py  get_simple_reward.py  plot_success.py
simple_env/cppn_simple/: rewards_total.npy
simple_env/test_ga_simple/: rewards_total.npy
(+1063 files in other folders)
